--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
+    "react-icons": "^5.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
